--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- BOOTSTARP is installed  (cmd)-->
+    <!-- Font Awesome-->
+    <!-- <link rel="stylesheet" href="fontawesome-free-5.10.2-web/css/all.min.css"> -->
+
+    <title>REACT | MemeJar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
